Fix overflowing content

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@ body{
     height: 200vh;
     margin: 0;
     padding: 0;
+    min-width: 0;
+    box-sizing: border-box;
 }
 .header{
     padding: 20px;
@@ -14,24 +16,27 @@ body{
 .first{
     background-color: #1f2937;
     width: 100%;
-    height: 25%;
+    flex-basis: 25%;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    flex-basis: 25%;
 }
 .second{
     width: 100%;
-    height: 25%;
+    flex-basis: 25%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 56px;
     margin-bottom: 130px;
+    flex-wrap: wrap;
 }
 .third{
     background-color: #e5e7eb;
     width: 100%;
-    height: 25%;
+    flex-basis: 25%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -39,9 +44,12 @@ body{
 }
 .fourth{
     width: 100%;
-    height: 25%;
+    flex-basis: 25%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 .logo{
     font-weight: 900;
@@ -82,8 +90,9 @@ a{
     background-color: hsl(0, 1%, 43%);
     color: white;
     display: flex;
-    justify-content: center;
     align-items: center;
+    flex-grow: 1;
+    flex-basis: 40%;
 }
 .under-header{
     margin: auto;
@@ -129,6 +138,7 @@ a{
     font-weight: lighter;
     font-style: italic;
     color: #1f2937;
+    flex-basis: 100%;
 }
 .author{
     color: #1f2937;
@@ -139,8 +149,8 @@ a{
     margin: auto;
     display: flex;
     flex-direction: column;
-    padding: 560px;
     gap: 10px;
+    max-width: 60%;
 }
 .panel{
     background-color: #3882f6;
@@ -168,14 +178,17 @@ a{
     padding: 5px 30px;
 }
 .footer{
+    padding: 0;
+    width: 100%;
     background-color: #1f2937;
     margin-top: auto;
+    margin-bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 30px;
 }
 .copyright{
     color: #e5e7eb;
     font-size: 18px;
+    padding: 30px;
 }
